--- a/static/index.html
+++ b/static/index.html
@@ -1,80 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <form
-      ref="uploadForm"
-      id="uploadForm"
-      action="/api/vacations"
-      method="post"
-      enctype="multipart/form-data"
-    >
-      <label
-        >description
-        <textarea onchange="onChange(this)" name="description"></textarea>
-      </label>
-      <label>
-        destination
-        <input type="text" onchange="onChange(this)" name="destination"
-      /></label>
-      <label
-        >picture <input type="file" onchange="onChange(this)" name="picture"
-      /></label>
-      <label
-        >Start Date
-        <input onchange="onChange(this)" type="datetime-local" name="startDate"
-      /></label>
-      <label
-        >End date<input
-          onchange="onChange(this)"
-          type="datetime-local"
-          name="endDate"
-      /></label>
-      <label
-        >Price
-        <input
-          onchange="onChange(this)"
-          type="number"
-          min="1"
-          step="any"
-          name="price"
-      /></label>
-      <input type="submit" value="Submit!" />
-    </form>
-    <script>
-      const form = document.forms[0];
-      const formData = new FormData();
-      form.onsubmit = (e) => {
-        e.preventDefault();
-        console.log("hello");
-
-        console.log(formData);
-        fetch("/api/vacations/b7c579ff-f620-11ec-9eb8-c025a57d8af5", {
-          method: "PUT",
-          headers: {
-            authorization:
-              "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6ImJvYmJieSIsImlkIjoiMjFhYTk3MWEtYzg1NC00N2MzLWE4MjAtMWJiMWNmYzI5YWIxIiwiaWF0IjoxNjU2Mjg1Nzk5fQ.H-L3nYJRM6i8Sfky_0ZLyW-L68IyGVWccrO0A9ShXzQ",
-          },
-          body: formData,
-        })
-          .then((res) => {
-            if (res.status === 200) return history.go(0);
-            throw new Error("error");
-          })
-          .catch((err) => console.log(err));
-      };
-
-      function onChange(that) {
-        if (that.type === "file") {
-          console.log(that.files[0])
-          formData.append(that.name, that.files[0], that.value);
-        } else formData.append(that.name, that.value);
-      }
-    </script>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Hit the Breaks</title><script defer="defer" src="/static/js/main.2dd44a98.js"></script><link href="/static/css/main.9adf6fd6.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
